--- a/index.html
+++ b/index.html
@@ -31,19 +31,18 @@
                     <h3>Make your unique <span id="onlineStore">ONLINE STORE.</span></h3><br><br><br>
                     <h3 id="tryitNow">TRY IT NOW - ITS FREE!</h3>
                    <h5>Or level-up with premium plans at just $1.00/month</h5>
+                   <h5>Sign up for free! No credit card required&nbsp;&nbsp;&nbsp;&nbsp;<img src="/images/item2_appr.png" width="120" height="40"></h5>
                 </div>
             </div>
-            <div class="item3"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
-            <div class="item4">><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
-            <div class="item5">5</div>
-            <div class="item6">6</div>
-            <div class="item7">7</div>
-            <div class="item8">8</div>
+            <div class="item3"></div>
+            <div class="item4"></div>
+            <div class="item5"></div>
+            <div class="item6"></div>
+            <div class="item7"></div>
+            <div class="item8"></div>
+            <div class="item9"></div>
     </div>
     <script src="js/main.js" type="text/javascript"></script>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 </body>
 </html>
